Adapt com.fasterxml.jackson through JsonUtil